--- a/fls-gulp/#src/index.pug
+++ b/fls-gulp/#src/index.pug
@@ -15,7 +15,7 @@ html(lang="ru-RU")
                     .logo_container
                         a(href="#")
                             img(src="img/logo.svg", alt="legalbet")
-
+                    .mobile-header-name База знаний
                     .menu_container
                         ul
                             li 
@@ -39,6 +39,7 @@ html(lang="ru-RU")
                             .help-button
                                 img.left_icon(src="img/icons/16/circle.png", alt="")
                                 span Поддержка
+                                img.green_round(src="img/icons/Oval.png", alt="")
                     .right_button_container
                         a(href="#search")
                             .search-button
@@ -48,8 +49,18 @@ html(lang="ru-RU")
                         a(href="#user")
                             .user-button
                                 img(src="img/header/right/user_no-avatar.png", alt="")
+
+            .help-min_container
+                select.help-min(name="help")
+                    option Школа ставок
+                    option FAQ
+                    option Вопрос-ответ
+                    option Советы игроков
+                    option Калькулятор расчета выйгрыша
+                    
             .stats-area
                 h1  Букмекерские конторы с высокими коэффициентами
+                img.not-to-sale(src="img/icons/no-transparent.png", alt="")
                 .stats-area_inner
                     .stats-area_inner_header
                         .stats-area_inner_header_container.delete-on-phone Букмекер
