--- a/fls-gulp/#src/scss/style.sass
+++ b/fls-gulp/#src/scss/style.sass
@@ -77,6 +77,12 @@ header
         margin-left: 1%
         display: inline-block
         background: rgba(0,0,0, 0)
+
+.mobile-header-name
+    display: none
+
+.help-min_container
+    display: none
     
 .logo_container
     width: 112px
@@ -111,6 +117,11 @@ header
         color: rgba(0, 0, 0, 0.4);
         font-size: 14px;
         line-height: 16px;
+
+        .green_round
+            position: absolute
+            margin-top: -4px
+            margin-left: 5px
 
 .right_button_container
     display: inline-block
@@ -156,6 +167,11 @@ nav
     border-radius: 4px;
     display: inline-block
     vertical-align: top;
+
+    .not-to-sale
+        position: absolute
+        margin-left: 651px
+        margin-top: -54px
 
     .stats-area_inner
         background: rgba(0, 0, 0, 0.0001);
@@ -356,6 +372,7 @@ form
             vertical-align: top
             margin-top: 0px
             text-align: left
+            margin-left: 53px;
             width: 468px;
             height: 208px
 
@@ -372,6 +389,8 @@ form
     label
         margin-top: 17px !important
 
+    .not-to-sale
+        margin-top: -90px !important
 
     .helpful-block
         text-align: left
@@ -406,7 +425,7 @@ form
         width: auto
         height: auto
         border: 0px
-        top: 10px
+        top: 11px
         right: 40px
     
     .mobile-menu_left
@@ -416,7 +435,7 @@ form
         left: -400px
         z-index: 5
         background: white
-        height: 100vh
+        height: 150vh
 
     .mobile-right
         position: absolute
@@ -430,12 +449,15 @@ form
     
     .mobile-menu_left
         display: block
+        
     
     .mobile-menu_container
+
+        z-index: 12
         position: absolute
         font-size: 30px
         line-height: 30px
-        margin-top: 90px
+        margin-top: 60px
         margin-left: 30px
 
         img
@@ -448,15 +470,23 @@ form
 @media(max-width: 800px)
     .stats-area
         position: absolute
-        width: 100vw
-        left: 0px
+        width: 96%
+        left: 2%
+        margin-top: 70px
         margin-left: 0px;
 
+
+        .arrow
+            margin-left: 10px !important
         .stats-area_inner
             width: 100%
 
         .delete-on-phone
             display: none
+    
+    .not-to-sale
+        right: -1px
+        top: 90px
     h1
         font-size: 4vw
         line-height: 4.5vw
@@ -493,4 +523,102 @@ form
             margin-left: 60px !important
 
     .logo_container
-        left: 0px
+        left: -17px
+        overflow-x: hidden
+        width: 30px
+
+    .mobile-navigation
+        right: 5px
+
+    .help-min_container
+        display: block
+        margin-left: 283px;
+        
+
+    .help-min
+        position: absolute;
+        right: 1%;
+        width: 98%;
+        border: 0px;
+        border-style: none;
+        box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.06);
+        border-radius: 3px;
+        box-sizing: border-box;
+        height: 48px;
+        padding-left: 16px;
+        font-family: ProximaNova;
+
+    .mobile-header-name
+        display: block
+        position: absolute
+        right: calc(50vw - 40px)
+        top: 20px
+
+    .right-block .subscribe-block
+        top: calc(550px + 7vw)
+        margin-left: 0px
+        width: 96% !important
+        left: calc(50% - 48%);
+
+        input, button
+            width: 100%
+        .accept_checkbox
+            width: 12px
+
+        label
+            margin-top: 15px !important
+
+        p
+            width: 50vw
+
+        img
+            margin-top: 31px
+            right: 7vw    
+
+@media(max-width: 400px)
+
+    .stats-area
+        padding-left: 15px;
+        width: 96%
+
+        img
+            transform: scale(0.8)
+
+    .stats-area_inner_body_container
+        margin-left: -9px
+        padding-left: 12px !important
+        width: 78px !important
+        
+    .stats-area_inner_body_right_container
+        right: 3vw !important
+
+    .stats-area_inner_body_container.marge
+        margin-right: 3vw !important
+        
+        img
+            margin-left: 6px
+           
+
+    .arrow
+            display: none
+    
+    .right-block .subscribe-block
+        top: 568px
+        margin-left: 0px
+        width: 96% !important
+        left: calc(50% - 48%);
+
+        input, button
+            width: 100%
+        .accept_checkbox
+            width: 12px
+
+        label
+            margin-top: 15px !important
+
+        p
+            width: 222px
+
+        img
+            margin-top: 31px
+            right: 7vw
