--- a/fls-gulp/#src/index.pug
+++ b/fls-gulp/#src/index.pug
@@ -143,6 +143,7 @@ html(lang="ru-RU")
                         a(href="FAQ") FAQ
                     p
                         a(href="q_a") Вопрос-ответ
+                            span.right-menu-number 3
                     p
                         a(href="advices") Советы игроков
                     p
