--- a/fls-gulp/#src/scss/style.sass
+++ b/fls-gulp/#src/scss/style.sass
@@ -285,6 +285,9 @@ nav
         margin-top: 16px;
         margin-bottom: 16px;
 
+    .right-menu-number
+        margin-left: 90px
+        color: black
 
 .subscribe-block
     box-sizing: border-box;
@@ -440,7 +443,7 @@ form
     .mobile-right
         position: absolute
         top: 0px
-        width: 100vw
+        width: 100%
         height: 100vh
         left: 0px
         z-index: 4
