--- a/fls-gulp/#src/scss/style.sass
+++ b/fls-gulp/#src/scss/style.sass
@@ -64,6 +64,9 @@ a
     cursor: pointer
     text-decoration: none;
     color: rgba(0, 0, 0, 0.8);
+    transition: linear .2s
+a:hover
+    color: #d0021b
 
 header
     width: 100%
@@ -271,9 +274,9 @@ nav
         color: black
 
 .helpful-block
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    border-radius: 3px;
+    border: 1px solid rgba(0, 0, 0, 0.1)
+    box-sizing: border-box
+    border-radius: 3px
     width: 240px
     height: 208px
     display: inline-block
@@ -282,16 +285,16 @@ nav
     padding: 24px
     
     p
-        margin-top: 16px;
-        margin-bottom: 16px;
+        margin-top: 16px
+        margin-bottom: 16px
 
     .right-menu-number
         margin-left: 90px
         color: black
 
 .subscribe-block
-    box-sizing: border-box;
-    border-radius: 3px;
+    box-sizing: border-box
+    border-radius: 3px
     margin-left: 22px
     padding: 24px
     margin-top: 22px
@@ -309,11 +312,11 @@ input, button
     padding-left: 8px
     width: 192px
     height: 32px
-    background: #FAFAFA;
-    border: 1px solid rgba(0, 0, 0, 0.07);
-    box-sizing: border-box;
-    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.06);
-    border-radius: 3px;
+    background: #FAFAFA
+    border: 1px solid rgba(0, 0, 0, 0.07)
+    box-sizing: border-box
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.06)
+    border-radius: 3px
 form
     margin-top: 10px
     margin-left: -4px
@@ -333,7 +336,7 @@ form
     label
         position: absolute
         margin-top: 15px
-        font-size: 12px;
+        font-size: 12px
         margin-left: 6px
         
         a
@@ -356,13 +359,13 @@ form
         display: none
 
     .container
-        width: 1052px;
+        width: 1052px
         margin-left: calc(50% - 526px)
 
 @media(min-width: 1700px)
     .container 
         margin-top: 100px
-        transform: scale(1.3);
+        transform: scale(1.3)
 
 @media(max-width: 1084px)
     .right-block
